Comments service integration (#2)
* add toc to blog pages

* working on comment system integration

* refactor and style

* use config protocols

* use prod comments svc

* enable plausible

--- a/config.toml
+++ b/config.toml
@@ -31,6 +31,12 @@ enabled = false
 enabled = true
 domain = "fs10xer.dev"
 
+[extra.comments]
+enabled = true
+base_domain = "comments.fs10xer.dev"
+http_proto = "https"
+ws_proto = "wss"
+
 [extra.open]
 enable = true
 image = "images/10xer_mascot.png"
