--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/adidoks"]
-	path = themes/adidoks
-	url = https://github.com/aaranxu/adidoks.git
+[submodule "themes/hook"]
+	path = themes/hook
+	url = https://github.com/InputUsername/zola-hook.git
